--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -40,8 +40,8 @@ jobs:
           file: Dockerfile
           push: true
           tags: |
-            ${{ secrets.DOCKERHUB_USERNAME }}/resource-access:latest
-            ${{ secrets.DOCKERHUB_USERNAME }}/resource-access:${{ github.sha }}
+            ${{ secrets.DOCKERHUB_USERNAME }}/wump:latest
+            ${{ secrets.DOCKERHUB_USERNAME }}/wump:${{ github.sha }}
 
       - name: Create Release
         id: create_release
@@ -53,7 +53,7 @@ jobs:
           release_name: Release ${{ github.sha }}
           body: |
             Docker image available at:
-            https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/resource-access/tags
+            https://hub.docker.com/r/${{ secrets.DOCKERHUB_USERNAME }}/wump/tags
           draft: false
           prerelease: false
 
